# Remotery.NET

./: .gitignore  .gitmodules  CMakeLists.txt  Directory.Build.props  README  Remotery.NET.sln  build-native.cmd  build-native.sh  generate_sources.sh  vcpkg.json
.github/workflows/: native-build.yml
scripts/: GenerateBase.rsp  GenerateRemotery.rsp
sources/Remotery.NET/: Remotery.NET.csproj
sources/Remotery.NET.Native/: Remotery.NET.Native.csproj
sources/Remotery.NET/Pretty/: CPUSample.cs  InteropUtils.cs  Utf8String.cs
sources/RemoteryCustom/: RemoteryCustom.c  RemoteryCustom.h
tests/Remotery.NET.Tests/: Remotery.NET.Tests.csproj
tests/sample/: sample.cs  sample.csproj
tests/sample.pretty/: sample.pretty.cs  sample.pretty.csproj
